--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Fuse - Angular 8+ Material Design Admin Template</title>
+        <title>turEvento - Beta</title>
         <base href="/">
 
         <meta charset="utf-8">
