--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>turEvento - Beta</title>
+        <title>turEvento - Beta 1.9.3</title>
         <base href="/">
 
         <meta charset="utf-8">
