--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
         <base href="/">
 
         <meta charset="utf-8">
-        <meta name="description" content="Material design admin template with pre-built apps and pages">
+        <meta name="description" content="">
         <meta name="keywords"
-              content="HTML,CSS,AngularJS,Angular,Angular 2,Angular 4,Angular 5,Angular 6,Angular 7,Material,Material 2">
-        <meta name="author" content="Withinpixels">
+              content="">
+        <meta name="author" content="turEvento">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
