responsive and fix send email exist and design

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 
     <head>
 
-        <title>turEvento - Beta 2.0.1</title>
+        <title>turEvento - CRM</title>
         <base href="/">
 
         <meta charset="utf-8">
-        <meta name="description" content="">
+        <meta name="description" content="Sistema gestion de convocatorias y marketing online">
         <meta name="keywords"
               content="">
-        <meta name="author" content="turEvento">
+        <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
