design responsive dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html lang="en">
 
-
     <head>
-
         <title>turEvento - CRM</title>
         <base href="/">
 
         <meta charset="utf-8">
         <meta name="description" content="Sistema gestion de convocatorias y marketing online">
-        <meta name="keywords"
-              content="">
+        <meta name="keywords" content="">
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
