--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>turEvento - CRM</title>
+        <title>turEvento - CRM v2.0</title>
         <base href="/">
 
         <meta charset="utf-8">
